[tool.poetry]
name = "exchange-radar"
version = "0.1.0"
description = "Get real-time trading data from different Crypto Exchanges and configure hooks, trends, notifications, messages based on custom rules."
authors = ["Paulo Antunes <pjmlantunes@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://exchangeradar.tech"
repository = "https://github.com/pantunes/exchange-radar"
keywords=[
    "cryptocurrency",
    "bitcoin",
    "ethereum",
    "signals",
    "trading",
    "crypto exchanges",
    "exchange",
    "crypto",
    "binance",
    "coinbase",
    "kraken",
    "kucoin",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "exchange_radar"}]

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.30.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
jinja2 = "^3.1.2"
environs = "^9.5.0"
tinydb = "^4.8.0"
python-binance = "^1.0.17"
python-kucoin = "^2.1.3"
pydantic = "2.0a3"
click = "^8.1.5"
pika = "^1.3.2"
requests = "^2.31.0"
urllib3 = "^1.26.17"
coverage = "^7.2.7"
copra = "1.2.9"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv"

[tool.poetry.scripts]
producer = "exchange_radar.producer.main:main"
consumer = "exchange_radar.consumer.main:main"
