[tool.poetry]
name = "exchange-radar"
version = "1.0.0"
description = "Real-time trading data from different Crypto Exchanges and configure hooks, trends, notifications, messages based on custom rules."
authors = ["Paulo Antunes <pjmlantunes@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://exchangeradar.tech"
repository = "https://github.com/pantunes/exchange-radar"
keywords=[
    "cryptocurrency",
    "bitcoin",
    "ethereum",
    "signals",
    "trading",
    "crypto exchanges",
    "exchange",
    "crypto",
    "binance",
    "coinbase",
    "kraken",
    "kucoin",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "exchange_radar"}]

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.30.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
jinja2 = "^3.1.2"
environs = "^9.5.0"
pydantic = "^2.0"
click = "^8.1.5"
pika = "^1.3.2"
requests = "^2.31.0"
urllib3 = "^1.26.16"
redis-om = "^0.2.1"
# exchanges
python-binance = "^1.0.17"
copra = "^1.2.9"
python-kucoin = "^2.1.3"
python-okx = "^0.2.6"
# /exchanges

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
producer = "exchange_radar.producer.main:main"
consumer = "exchange_radar.consumer.main:main"

[tool.pytest.ini_options]
addopts = "-vv"

[tool.coverage.run]
include = ["exchange_radar/**"]
omit = ["**/settings/*", "**/tests/*", "**/static/*", "**/templates/*"]

[tool.black]
line-length = 119
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["exchange_radar"]
skip = ["venv/"]
