[tool.poetry]
name = "exchange-radar"
version = "1.3.0"
description = "Live trading information from various cryptocurrency exchanges."
authors = ["Paulo Antunes <pjmlantunes@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://exchangeradar.tech"
repository = "https://github.com/pantunes/exchange-radar"
keywords=[
    "cryptocurrency",
    "bitcoin", "btc",
    "ethereum", "eth",
    "chainlink", "link",
    "trading",
    "crypto exchanges",
    "exchange",
    "crypto",
    "binance",
    "coinbase",
    "kraken",
    "kucoin",
    "okx",
    "bybit",
    "bitstamp",
    "mexc",
    "htx",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "exchange_radar"}]

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.30.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
jinja2 = "^3.1.2"
environs = "^9.5.0"
pydantic = "^2.0"
click = "^8.1.5"
# exchanges
python-binance = "^1.0.17"
copra = "^1.2.9"
python-kucoin = "^2.1.3"
python-okx = "^0.2.6"
pybit = "^5.6.2"
pymexc = "^1.0.10"
# /exchanges
pika = "^1.3.2"
requests = "^2.31.0"
urllib3 = "^1.26.16"
redis-om = "^0.2.1"
types-requests = "2.31.0.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-asyncio = "^0.23.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipython = "^8.14.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
producer = "exchange_radar.producer.main:main"
consumer = "exchange_radar.consumer.main:main"

[tool.pytest.ini_options]
addopts = "-vv"

[tool.coverage.run]
include = ["exchange_radar/**"]
omit = ["**/settings/*", "**/tests/*", "**/static/*", "**/templates/*"]

[tool.black]
line-length = 119
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["exchange_radar"]
skip = ["venv/"]
